--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.12.0",
     "postcss": "^8.4.44",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
