--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.33.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.44",
     "postcss-cli": "^11.0.0",
