--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "rimraf dist && npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "db:generate": "npx drizzle-kit generate",
-    "db:migrate": "npx drizzle-kit migrate",
+    "db:generate": "npx drizzle-kit generate --config=./src/drizzle.config.ts",
+    "db:migrate": "npx drizzle-kit migrate --config=./src/drizzle.config.ts",
     "db:seed": "node -r esbuild-register src/libs/db/seed.ts",
-    "tailwind:css": "npx tailwindcss -i ./src/css/style.css -o ./public/style.css --watch"
+    "tailwind:css": "npx tailwindcss -i ./src/css/style.css -o ./public/style.css --watch",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,7 @@
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
