--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,6 @@
 # BE
+NODE_ENV=development
 PORT=5000
 BASE_URL=http://localhost:5000
 RATE_LIMIT_TIME=600000 # 10 min
 RATE_LIMIT_COUNT=100
-
-# DB
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
