--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:seed": "node -r esbuild-register src/libs/db/seeds/index.ts",
     "db:ui": "npx drizzle-kit studio --config=./src/drizzle.config.ts",
     "tailwind:css": "npx tailwindcss -i ./src/css/style.css -o ./public/style.css --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "jest --detectOpenHandles --watch"
   },
   "keywords": [],
   "author": "",
@@ -34,11 +35,16 @@
     "@faker-js/faker": "^9.0.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.2",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.24.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
