--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@faker-js/faker": "^9.0.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
@@ -40,12 +41,14 @@
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.24.2",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.6.0"
   }
 }
