--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "db:ui": "npx drizzle-kit studio --config=./src/drizzle.config.ts",
     "tailwind:css": "npx tailwindcss -i ./src/css/style.css -o ./public/style.css --watch",
     "clean": "rimraf dist",
-    "test": "jest --detectOpenHandles --watch"
+    "test": "jest --detectOpenHandles --watch",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
   "author": "",
@@ -49,6 +52,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.6.0",
+    "vitepress": "^1.3.4"
   }
 }
