--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fakeapi",
+  "name": "cyrus-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,10 @@
     "test": "jest --detectOpenHandles --watch",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "format": "prettier --write .",
+    "lint": "eslint . ",
+    "lint:fix": "eslint . --fix "
   },
   "keywords": [],
   "author": "",
@@ -35,7 +38,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.0",
+    "@eslint/js": "^9.11.1",
     "@faker-js/faker": "^9.0.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
@@ -44,15 +47,19 @@
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.24.2",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.6.0",
+    "typescript-eslint": "^8.8.0",
     "vitepress": "^1.3.4"
   }
 }
