--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -15,8 +15,10 @@ jobs:
           username: ${{secrets.USERNAME}}
           key: ${{secrets.SSH_PRIVATE_KEY}}
           port: 22
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build 
         run: npm run build
       - name: Restart pm2
