fix(api-ci): Test CI

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -1,7 +1,7 @@
 name: API
 on:
-  # push:
-  #   branches: ['master']
+  push:
+    branches: ['master']
   workflow_dispatch:
 
 jobs:
@@ -21,5 +21,5 @@ jobs:
         run: npm ci
       - name: Build 
         run: npm run build
-      - name: Restart pm2
-        run: pm2 restart dist/index.js
+      # - name: Restart pm2
+      #   run: pm2 restart dist/index.js
