--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -17,9 +17,11 @@ jobs:
           port: 22
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm ci
-      - name: Build 
-        run: npm run build
+      - name: Test
+        run: echo ${{ github.workspace }}
+      # - name: Install dependencies
+      #   run: npm ci
+      # - name: Build 
+      #   run: npm run build
       # - name: Restart pm2
       #   run: pm2 restart dist/index.js
