--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Test
-        run: echo ${{ github.workspace }}
+        run: git pull https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master
       # - name: Install dependencies
       #   run: npm ci
       # - name: Build 
