--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -20,5 +20,5 @@ jobs:
             git pull origin master
             git status
             npm install
-            npm build
+            npm run build
             pm2 restart dist/index.js
