--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,4 +1,4 @@
-name: API
+name: Docs
 on:
   push:
     branches: ['master']
@@ -19,5 +19,5 @@ jobs:
             cd ~/sites/cyrus-api
             git pull origin master
             npm install
-            npm run build
-            pm2 restart dist/index.js
+            npm run docs:build
+            pm2 restart ecosystem.config.js
