--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "db:ui": "npx drizzle-kit studio --config=./src/drizzle.config.ts",
     "tailwind:css": "npx tailwindcss -i ./src/css/style.css -o ./public/style.css --watch",
     "clean": "rimraf dist",
-    "test": "jest --detectOpenHandles --watch",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --detectOpenHandles --watch",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "format": "prettier --write .",
     "lint": "eslint . ",
-    "lint:fix": "eslint . --fix "
+    "lint:fix": "eslint . --fix ",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -51,6 +53,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
