--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,6 +18,8 @@ jobs:
           script: |
             cd ~/sites/cyrus-api
             git pull origin master
+            rm -r node_modules
+            rm package-lock.json
             npm install
             npm run docs:build
             pm2 restart ecosystem.config.js
