chore: 🤖 fix CI

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -17,6 +17,7 @@ jobs:
           port: 22
           script: |
             cd ~/sites/cyrus-api
+            rm -r node_modules
             git pull origin master
             npm install
             npm run docs:build
