--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.8.0",
     "vitepress": "^1.3.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
