--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "better-sqlite3": "^11.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "ejs": "^3.1.10",
@@ -45,6 +46,7 @@
     "@eslint/js": "^9.11.1",
     "@faker-js/faker": "^9.0.1",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.2",
